--- a/stylesheets/scss/_header.scss
+++ b/stylesheets/scss/_header.scss
@@ -3,7 +3,7 @@
 .header-container {
   @extend %clearfix;
   position: relative;
-  z-index: 30002;
+  z-index: 30000;
   padding-top: 23px;
   padding-bottom: 23px;
 
